@@ -1,3 +1,7 @@
+Mon Mar 23 17:36:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (wreadlink, rb_w32_ureadlink): implement readlink().
+
 Mon Mar 23 14:40:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/win32.c (winnt_stat): stat with following symbolic links.
